# AI-Conversation-Platform-The-Future-of-Multi-Agent-Collaboration

./: .coveragerc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_README.md  Dockerfile  LICENSE  MONITORING.md  Makefile  README.md  RELEASE_DRAFT.md  SECURITY.md  UPGRADE_GUIDE.md  base.py  chatgpt.py  check_direct_env.py  check_env.py  docker-compose.yml  grok.py  list_gemini_models.py  metrics.py  perplexity.py  prometheus.yml  pyproject.toml  render.yaml  requirements.txt  test_queue.py  v5_UPGRADE_NOTES.md  view_conversation.py
.github/workflows/: auto-fix.yml  ci.yml  cleanup.yml  codeql-analysis.yml  codeql.yml  pages.yml  release.yml
agents/: __init__.py  base.py  chatgpt.py  claude.py  gemini.py  grok.py  perplexity.py  test_agents.py
cli/: __init__.py  start_conversation.py
core/: __init__.py  common.py  config.py  metrics.py  queue.py  tracing.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER_README.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_UPDATES_SUMMARY.md  INDEX.md  INSTALLATION_GUIDE.md  MONITORING.md  QUICK_START.md  README.md  README_updated.md  RELEASE_DRAFT.md  TESTING.md  TESTING_updated.md  TEST_REFERENCE.md  UPGRADE_GUIDE.md  docker-compose-fixed.yml  docs_README.md  index.html
logs/: conversation.jsonl
monitoring/: dashboard.json
monitoring/grafana/provisioning/: dashboards.yml
monitoring/grafana/provisioning/dashboards/: dashboard.json  dashboards.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
monitoring/prometheus/: prometheus.yml
scripts/: lint.sh
tests/: __init__.py  test_agents.py  test_agents_additional.py  test_agents_base_cov.py  test_agents_retry.py  test_base_orchestrator.py  test_cli.py  test_common_utils.py  test_config_utils_metrics_comprehensive.py  test_demo.py  test_e2e_agent_run.py  test_integration_comprehensive.py  test_metrics.py  test_providers_init.py  test_queue.py  test_queue_cov.py  test_tracing.py  test_tracing_cov.py  test_view_conversation.py
web/: app.py  demo.py
web/templates/: demo.html
