[project]
name = "ai-conversation-platform"
version = "5.0.0"
description = "Enterprise async AI-to-AI conversation platform (AIs talking to AIs)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Paul Clark"}]
dependencies = [
  "bleach>=6.1.0",
  "openai>=1.45.0",
  "anthropic>=0.39.0",
  "google-generativeai>=0.7.2",
  "filelock>=3.14.0",
  "prometheus_client>=0.20.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.2",
  "streamlit>=1.37.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0",
  "ruff>=0.6.0", # Consolidated from the other section
  "mypy>=1.10",
  "codespell>=2.3.0",
  "redis>=5.0.0", # The missing dependency
]

[project.urls]
Homepage = "https://github.com/systemslibrarian/ai-conversation-platform"
Issues = "https://github.com/systemslibrarian/ai-conversation-platform/issues"

[project.scripts]
aic-start = "cli.start_conversation:main"

[tool.ruff]
line-length = 100
target-version = "py311"


[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "core*", "cli*", "web*"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"


[tool.mypy]
python_version = "3.11"
packages = ["agents", "core", "cli", "web"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true

# This section was removed as it was conflicting
# [dependency-groups]
# dev = [
#    "ruff>=0.14.3",
# ]
